--- a/test-index.css
+++ b/test-index.css
@@ -1,5 +1,56 @@
 * {
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+
+
+body {
+  background-color: lightpink;
+  display: flex;
+  justify-content: center;
+}
+
+
+.main-box {
+  margin-top: 7%;
+  background-color: white;
+  width: 330px;
+  height: 300px;
+  border-radius: 8px;
+}
+
+
+
+.star-faq {
+  display: flex;
+}
+
+.icon-star-bg {
+  background-color: #d0d0d0;
+  width: 27px;
+  height: 27px;
+  border-radius: 33px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+.questions-answers {
+}
+
+.question-1 {
+  font-size: 11px;
+  font-family: '', Arial, Helvetica, sans-serif;
+  font-weight: ;
+}
+
+.answer-1 {
+  font-size: 10px;
+  font-family: '', Arial, Helvetica, sans-serif;
+  font-weight: ;
 }
