--- a/test-index.css
+++ b/test-index.css
@@ -17,8 +17,8 @@ body {
 .main-box {
   margin-top: 7%;
   background-color: white;
-  width: 400px;
-  height: 370px;
+  width: 430px;
+  height: 435px;
   border-radius: 8px;
 }
 
@@ -43,6 +43,7 @@ body {
 .question-answer {
   margin-top: 5%;
   margin-left: 5%;
+  position: relative;
 }
 
 
@@ -50,20 +51,23 @@ body {
   font-size: 11px;
   font-family: 'Work Sans', Arial, Helvetica, sans-serif;
   font-weight: 600;
+  cursor: pointer;
 }
 
 .arrow-1 {
   height: 7px;
-  margin-left: 30px;
+  margin-left: 95px;
+  cursor: pointer;
 }
 
 .answer-1 {
-  margin-top: 3%;
+  margin-top: 2%;
   font-size: 8.5px;
   font-family: 'Work Sans', Arial, Helvetica, sans-serif;
   font-weight: 500;
   width: 290px;
   color: #909090;
+  display: none;
 }
 
 
@@ -73,15 +77,17 @@ body {
   font-size: 11px;
   font-family: 'Work Sans', Arial, Helvetica, sans-serif;
   font-weight: 600;
+  cursor: pointer;
 }
 
 .arrow-2 {
   height: 7px;
-  margin-left: 168px;
+  margin-left: 234px;
+  cursor: pointer;
 }
 
 .answer-2 {
-  margin-top: 3%;
+  margin-top: 2%;
   font-size: 8.5px;
   font-family: 'Work Sans', Arial, Helvetica, sans-serif;
   font-weight: 500;
@@ -96,15 +102,46 @@ body {
   font-size: 11px;
   font-family: 'Work Sans', Arial, Helvetica, sans-serif;
   font-weight: 600;
+  cursor: pointer;
 }
 
 .arrow-3 {
   height: 7px;
-  margin-left: 168px;
+  margin-left: 87px;
+  cursor: pointer;
 }
 
 .answer-3 {
-  margin-top: 3%;
+  margin-top: 2%;
+  font-size: 8.5px;
+  font-family: 'Work Sans', Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  width: 290px;
+  color: #909090;
+}
+
+
+
+.question-4 {
+  margin-top: 16px;
+  font-size: 11px;
+  font-family: 'Work Sans', Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  width: 300px;
+  cursor: pointer;
+}
+
+.arrow-4 {
+  position: relative;
+  top: -25px;
+  height: 7px;
+  margin-left: 370px;
+  cursor: pointer;
+}
+
+.answer-4 {
+  position: relative;
+  top: -2px;
   font-size: 8.5px;
   font-family: 'Work Sans', Arial, Helvetica, sans-serif;
   font-weight: 500;
